# benchgo

./: .gitignore  MANIFEST.in  README.md  setup.cfg
scripts/: benchgo  benchgo_spark  benchgo_spark.py  mkdata  prom_test.py  prometheus_dump.db
src/: merge_tables
src/benchgo/: README.md  _DELETE_prom_test.py  _DELETE_sdk.py  _DELETE_spark.py  _DELETE_trino.py  __init__.py  benchgo_sdk.py  benchgo_spark.py  benchgo_trino.py  benchgo_vastdb.py  data.py  filter.py  prometheus_handler.py  prometheus_handlers.py  sdk.py  spark.py  spark_config_template.py  tpcds.py  tpcds_10t_queries.py  tpcds_1t_queries.py  tpcds_selective.py  tpcds_selective_queries.py  tpcds_sf10000_queries.py  transaction_tables.py  trino.py  util.py  words.txt
src/benchgo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/benchgo/dremio/: tpcds.py  util.py
src/benchgo/queries/: stream_to_json.py
src/benchgo/queries/dremio/: tpcds_sf1000_queries.py
src/benchgo/queries/sf1/4/: query_1.sql
src/benchgo/queries/sf1/8/: query_0.sql  query_2.sql  query_4.sql  query_7.sql
src/benchgo/queries/sf10/8/: query_0.sql  query_3.sql  query_5.sql
src/benchgo/queries/sf100/8/: query_1.sql  query_6.sql
src/benchgo/queries/sf1000/4/: query_2.sql
src/benchgo/queries/sf1000/8/: query_0.sql  query_4.sql  query_6.sql
src/benchgo/queries/sf10000/4/: query_0.sql  query_1.sql
src/benchgo/queries/sf10000/8/: query_6.sql  query_7.sql
src/benchgo/queries/sf100000/1/: query_0.sql
src/benchgo/queries/sf100000/2/: query_1.sql
src/benchgo/queries/sf100000/8/: query_2.sql  query_3.sql
src/benchgo/queries/spark/: __init__.py
src/benchgo/queries/tpcds/: __init__.py
src/benchgo/queries/trino/: __init__.py  tpcds_selective_queries.py  tpcds_sf10000_queries.py  tpcds_sf1000_queries.py
src/benchgo/spark/: __init__.py  filter.py  spark_config_template.py  throughput.py  tpcds.py  util.py
src/benchgo/trino/: __init__.py  filter.py  tpcds.py  util.py
(+252 files in other folders)
