[metadata]
name = benchgo
version = 0.2
author = Jason Russler
author_email = jason.russler@vastdata.com
description = Benchmarking scripts and utls
long_description = file: README.md
long_description_content_type =
url = https://github.com/thirstler/benchgo
project_urls =
        Bug Tracker = https://github.com/thirstler/benchgo/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
package_dir =
        = src
scripts =
        scripts/benchgo
        scripts/benchgo_spark
        scripts/benchgo_spark.py
        scripts/mkdata
        scripts/merge_tables

packages = find:
python_requires = >=3.6
install_requires =
        pyyaml
        pyjson
        prometheus_api_client
        pyspark
        trino
        requests
        boto3
        vastdb
        
[options.packages.find]
where = src

[egg_info]
tag_build =
tag_date = 0
